Fix horizontal scroll issue (Main overflow:clip;)

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ body {
 
 main {
   scroll-snap-type: y mandatory;
-  overflow: auto;
+  overflow: clip;
 }
 
 #title, #skills, #projects, #contact {
